# gastos-python-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
app/: database.py  main.py
app/config/: settings.py
app/controllers/: budget_controller.py  expense_controller.py  money_source_controller.py  person_controller.py
app/dao/: budget_dao.py  expense_dao.py  money_source_dao.py  money_source_movement_dao.py  person_dao.py
app/db/: base.py  session.py
app/db/models/: __init__.py  money_source_model.py  person_model.py  user_model.py
app/dependencies/: containers.py  security.py
app/models/: __init__.py  budget.py  expense.py  expense_image.py  money_source.py  money_source_movement.py  person.py
app/repositories/interfaces/: __init__.py  budget_repository.py  expense_repository.py  money_source_movement_repository.py  money_source_repository.py  person_repository.py  user_repository.py
app/repositories/jpa/: __init__.py  money_source_jpa_repository.py  person_jpa_repository.py  (+1 more)
app/routes/: attachments.py  auth.py  budgets.py  capture.py  chat.py  expenses.py  money_sources.py  persons.py
app/schemas/: attachment.py  auth.py  budget.py  capture.py  chat.py  expense.py  money_source.py  money_source_movement.py  person.py
app/services/: ai_capture_service.py  ai_chat_service.py  attachment_service.py  auth_service.py  budget_service.py  expense_service.py  money_source_service.py  person_service.py  storage_service.py
app/utils/: budget_check.py  dates.py
tests/: conftest.py
(+22 files in other folders)
